# crew-mysql-demo

./: .gitignore  README.md  pyproject.toml
src/crew_mysql_demo/: crew.py  main.py  sql_tools.py
src/crew_mysql_demo/config/: agents - Copy.yaml  agents.yaml  tasks.yaml
