[tool.poetry]
name = "crew-mysql-demo"
version = "0.1.0"
description = "CrewAI MySQL reporting demo"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = "^0.121.0"}
crewai-tools = "^0.45.0"
SQLAlchemy = ">=2.0.27,<3.0"
PyMySQL = ">=1.0.2"
pyyaml = "^6.0.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
